Update and rename MultiLayerPerceptron.ipynb to HandWrittenRecognition_MultiLayerPerceptron.ipynb

--- a/HandWrittenRecognition_MultiLayerPerceptron.ipynb
+++ b/HandWrittenRecognition_MultiLayerPerceptron.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **MultiLayerPerceptron of mnist dataset using keras library**"
+        "# **HandWrittenRecognition of mnist dataset**"
       ],
       "metadata": {
         "id": "kbxyzcE2KE_V"
