Update and rename HandWrittenRecognition_MultiLayerPerceptron.ipynb to Hand Written digit Recognition.ipynb

--- a/Hand Written digit Recognition.ipynb
+++ b/Hand Written digit Recognition.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **HandWrittenRecognition of mnist dataset**"
+        "# **Hand Written digit Recognition of mnist dataset**"
       ],
       "metadata": {
         "id": "kbxyzcE2KE_V"
